# Mercadona_Agent

./: .gitignore  README.md  index.html  pyproject.toml  script.js  style.css
data/processed/: products_macro.csv
data/raw/: products_macro.csv
notebooks/: 01_Init_Project.ipynb  02_Products_Analysis.ipynb
src/: main.py
