[project]
name = "mercadona-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "beautifulsoup4>=4.12.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "selenium>=4.27.1",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
    "wordcloud>=1.9.4",
]
